--- a/content/test/100k/advanced/a-001.md
+++ b/content/test/100k/advanced/a-001.md
@@ -6,4 +6,9 @@ slug: 'a-001'
 draft: true
 categories: ["DS-100本ノック＋α（発展編）"]
 tags: ["R", "SQL"]
+cover:
+  image: "images/100knocks/cover-100k-advanced.png" #< /static
+  relative: false
+  # hiddenInList: false
+  # hiddenInSingle: false # hide on single page
 ---
