--- a/content/test/100k/advanced/a-002.md
+++ b/content/test/100k/advanced/a-002.md
@@ -9,6 +9,11 @@ summary: 'これはsummaryです。'
 categories: ["DS-100本ノック＋α（発展編）"]
 tags: ["R", "SQL"]
 keywords: ["xxxxxxx"]
+cover:
+  image: "images/100knocks/cover-100k-advanced.png" #< /static
+  relative: false
+  # hiddenInList: false
+  # hiddenInSingle: false # hide on single page
 ---
 
 ## A7
