--- a/content/test/100k/standard/r-028.md
+++ b/content/test/100k/standard/r-028.md
@@ -12,4 +12,9 @@ tags:
 - R
 - SQL
 # tags_weight: 2
+cover:
+  image: "images/100knocks/cover-100k-standard.png" #< /static
+  relative: false
+  # hiddenInList: false
+  # hiddenInSingle: false # hide on single page
 ---
