--- a/content/test/100k/standard/r-030.md
+++ b/content/test/100k/standard/r-030.md
@@ -6,4 +6,9 @@ slug: 'r-030'
 title: "【R+SQL】データサイエンス100本ノック＋α（標準編）R-030"
 categories: 
   - "DS-100本ノック＋α（標準編）"
+cover:
+  image: "images/100knocks/cover-100k-standard.png" #< /static
+  relative: false
+  # hiddenInList: false
+  # hiddenInSingle: false # hide on single page
 ---
