--- a/content/test/100k/standard/r-003.md
+++ b/content/test/100k/standard/r-003.md
@@ -11,4 +11,9 @@ tags:
   - R
   - SQL
 # tags_weight: 1
+cover:
+  image: "images/100knocks/cover-100k-standard.png" #< /static
+  relative: false
+  # hiddenInList: false
+  # hiddenInSingle: false # hide on single page
 ---
