--- a/content/test/100k/standard/r-030.md
+++ b/content/test/100k/standard/r-030.md
@@ -4,6 +4,7 @@ draft: true
 slug: 'r-030'
 # title: 'R 030'
 title: "【R+SQL】データサイエンス100本ノック＋α（標準編）R-030"
+hideSummary: true
 categories: 
   - "DS-100本ノック＋α（標準編）"
 cover:
@@ -12,3 +13,10 @@ cover:
   # hiddenInList: false
   # hiddenInSingle: false # hide on single page
 ---
+
+## Single templates
+
+これらのテンプレート パスは、詳細度の降順で並べ替えられます。  
+最も詳細度の低いパスは各リストの一番下に表示されます。
+
+テンプレートの検索順序を確認して、必要なレベルの詳細度を提供するテンプレート パスを選択します。
