--- a/content/test/100k/advanced/a-002.md
+++ b/content/test/100k/advanced/a-002.md
@@ -1,12 +1,12 @@
 ---
 # title: '7th Post'
-title: '【R+SQL】データサイエンス100本ノック＋α（発展編）A-002'
+title: '[R+SQL] データサイエンス100本ノック＋α (発展編) A-002'
 date: '2025-01-01T05:34:39+09:00'
 # weight: 210
 slug: 'a-002'
 draft: true
 summary: 'これはsummaryです。'
-categories: ["DS-100本ノック＋α（発展編）"]
+categories: ["DS-100本ノック＋α (発展編) "]
 tags: ["R", "SQL"]
 keywords: ["xxxxxxx"]
 cover:
