--- a/content/test/100k/standard/r-003.md
+++ b/content/test/100k/standard/r-003.md
@@ -1,11 +1,11 @@
 ---
-title: '【R+SQL】データサイエンス100本ノック＋α（標準編）R-003'
+title: '[R+SQL] データサイエンス100本ノック＋α (標準編) R-003'
 date: '2025-01-01T02:30:10+09:00'
 slug: 'r-003'
 # weight: 10
 draft: true
 categories: 
-  - "DS-100本ノック＋α（標準編）"
+  - "DS-100本ノック＋α (標準編) "
 # tags: ["R", "SQL"]
 tags: 
   - R
