--- a/content/test/100k/advanced/a-001.md
+++ b/content/test/100k/advanced/a-001.md
@@ -1,10 +1,10 @@
 ---
-title: '【R+SQL】データサイエンス100本ノック＋α（発展編）A-001'
+title: '[R+SQL] データサイエンス100本ノック＋α (発展編) A-001'
 date: '2025-01-01T05:34:25+09:00'
 slug: 'a-001'
 # weight: 205
 draft: true
-categories: ["DS-100本ノック＋α（発展編）"]
+categories: ["DS-100本ノック＋α (発展編) "]
 tags: ["R", "SQL"]
 cover:
   image: "images/100knocks/cover-100k-advanced.png" #< /static
