--- a/content/test/100k/standard/r-028.md
+++ b/content/test/100k/standard/r-028.md
@@ -1,12 +1,12 @@
 ---
 # title: '4th Post'
-title: '【R+SQL】データサイエンス100本ノック＋α（標準編）R-028'
+title: '[R+SQL] データサイエンス100本ノック＋α (標準編) R-028'
 date: '2025-01-01T05:32:46+09:00'
 slug: 'r-028'
 # weight: 10
 draft: true
 categories: 
-- "DS-100本ノック＋α（標準編）"
+- "DS-100本ノック＋α (標準編) "
 # tags: ["R", "SQL"]
 tags: 
 - R
