--- a/content/test/100k/standard/r-030.md
+++ b/content/test/100k/standard/r-030.md
@@ -3,10 +3,10 @@ date: '2025-01-04T19:47:45+09:00'
 draft: true
 slug: 'r-030'
 # title: 'R 030'
-title: "【R+SQL】データサイエンス100本ノック＋α（標準編）R-030"
+title: "[R+SQL] データサイエンス100本ノック＋α (標準編) R-030"
 hideSummary: true
 categories: 
-  - "DS-100本ノック＋α（標準編）"
+  - "DS-100本ノック＋α (標準編) "
 cover:
   image: "images/100knocks/cover-100k-standard.png" #< /static
   relative: false
