--- a/content/test/100k/standard/r-003.md
+++ b/content/test/100k/standard/r-003.md
@@ -12,8 +12,13 @@ tags:
   - SQL
 # tags_weight: 1
 cover:
-  image: "images/100knocks/cover-100k-standard.png" #< /static
-  relative: false
+  image: "images/box.png" #< /static
+  # image: "images/100knocks/cover-100k-standard.png" #< /static
+  # relative: false
   # hiddenInList: false
   # hiddenInSingle: false # hide on single page
 ---
+
+フロントマターで cover.image を設定。
+
+<!--more-->
