--- a/content/test/100k/standard/r-028.md
+++ b/content/test/100k/standard/r-028.md
@@ -12,9 +12,13 @@ tags:
 - R
 - SQL
 # tags_weight: 2
-cover:
-  image: "images/100knocks/cover-100k-standard.png" #< /static
-  relative: false
-  # hiddenInList: false
-  # hiddenInSingle: false # hide on single page
+# cover:
+#   image: "images/100knocks/cover-100k-standard.png" #< /static
+#   relative: false
+#   hiddenInList: false
+#   hiddenInSingle: false # hide on single page
 ---
+
+cover.image はセクションの設定を引き継いでいる.
+
+<!--more-->
