--- a/content/test/100k/standard/r-901.md
+++ b/content/test/100k/standard/r-901.md
@@ -2,15 +2,19 @@
 title: '[R+SQL] データサイエンス100本ノック＋α (標準編) R-901'
 date: '2025-01-01T04:30:10+09:00'
 slug: 'r-901'
-# weight: 10
+weight: 14
 draft: true
 categories: 
   - "DS-100本ノック＋α (標準編) "
 # tags: ["R", "SQL"]
+tocOpen: true
 tags: 
   - R
   - SQL
-# tags_weight: 1
+params:
+  question:
+    edition: "standard"
+    id: "R-901"
 # cover:
   # image: "images/box.png" #< /static
   # image: "images/100knocks/cover-100k-standard.png" #< /static
@@ -20,3 +24,17 @@ tags:
 ---
 
 <!--more-->
+
+{{% include "template/tmp-head.md" %}}
+
+## 演習問題 {{% param question.id %}}
+
+{{< k100/question >}}
+
+## R
+
+本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文。
+
+## SQL
+
+本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文。
